# secondbrain

./: .env.host.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  ARCHITECTURE.md  CLAUDE.md  Makefile  README.md  hooktest.py  package-lock.json  playwright.config.ts  pyproject.toml  setup.sh
.claude/: LEARNINGS.md  SECURITY.md  settings.json
.claude/agents/: second-brain.md
.devcontainer/: Dockerfile  claude-dev.sh  devcontainer.json  extract-claude-auth.sh  guardrail-hook.sh  post-create.sh  post-start.sh
.githooks/: post-commit  post-merge  pre-commit
.github/workflows/: ci.yml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md  config.json  v1.0-MILESTONE-AUDIT.md  v1.5-MILESTONE-AUDIT.md
chrome-extension/: background.js  content.js  manifest.json  options.html  options.js  popup.css  popup.html  popup.js
e2e/: actions.spec.ts
engine/: ai.py  ann_index.py  anonymize.py  api.py  api_config.py  attachments.py  backup.py  brain_health.py  capture.py  classifier.py  config_loader.py  consolidate.py  db.py  delete.py  digest.py  embeddings.py  entities.py  export.py  forget.py  gui.py  health.py  init_brain.py  intelligence.py  link_capture.py  links.py  mcp_server.py  merge_cli.py  paths.py  people.py  perf.py  rag.py  ratelimit.py  read.py  reindex.py  rename.py  router.py  search.py  segmenter.py  sharding.py  smart_classifier.py  (+4 more)
frontend/: package-lock.json  package.json  tailwind.config.js  vite.config.ts
scripts/: bootstrap.py  bulk_extract_actions.py  install_native.py  install_subagent.py
tests/: conftest.py  test_adapters.py  test_ai.py  test_ann_index.py  test_anonymize.py  test_api.py  test_api_extensions.py  test_api_sse.py  test_api_tags.py  test_api_upload.py  test_attachments.py  test_audit.py  test_backup.py  test_bootstrap.py  test_brain_health.py  test_capture.py  test_capture_integrity.py  test_capture_nudges.py  test_capture_similarity.py  test_chunks.py  test_classifier.py  test_co_capture_auto.py  test_config_loader.py  test_consent.py  test_consolidate.py  test_db.py  test_db_helpers.py  test_decomposer.py  test_delete.py  test_devcontainer.py  test_digest.py  test_embeddings.py  test_enrich.py  test_entities.py  test_export.py  test_forget.py  test_gitignore.py  test_gui.py  test_health.py  test_hooks.py  (+38 more)
ui-descriptions/: UI-DESIGN-BRIEF.md  actions-page.md  app-shell.md  command-palette.md  inbox-page.md  intelligence-page.md  links-page.md  meetings-page.md  modals.md  notes-view.md  people-page.md  projects-page.md  right-panel.md  sidebar.md
(+972 files in other folders)
